--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <html>
     <head>
+        <!--TODO: link stylesheet  -->
+        <!-- <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='styles/mainpage.css')}}"> -->
         <style>
             .error{
-                color: red;
+                color:red
             }
         </style>
+
         <title>{{title}}</title>
         <nav>
             <a href="/blog">Blog</a>
